# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  22 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add INFOPATH to /etc/env.d/00basic.

    Fix src/awk/genenviron.awk to get the order of the env.d files
    correct.  Also fix it to handle *all* the SPECIALS correctly.
    This closes bug #12411.

* rc-scripts 1.4.2.6 (18 Dec 2002)

  18 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add mips changes to sbin/MAKEDEV.  This should close bug #12329,
    thanks to Nicholas Wourms <nwourms@netscape.net>.

    Quote some tests in /sbin/rc-update to fix/avoid the problem
    in bug #

    Fix awk regex in /etc/init.d/halt.sh to fix bug #11795.

    Update shell for postgres user, closing bug #12258.

  11 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix src/awk/genenviron.awk not to add duplicate entries, closing
    bug #8999.

* rc-scripts 1.4.2.5 (09 Dec 2002)

  08 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add another sync to /etc/init.d/halt.sh, closing bug 8173.

    Add smmsp uid and gid.  Closes bug #8952.

  04 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Setup colums, etc up properly for serial consoles in /sbin/functions.sh.
    Closes bug #11557, thanks to Erik Scrafford <erik@scrafford.org>.

    Add headers similar to that of portage-2.0.45 and up to the
    generated profile files (/etc/{profile,csh}.env).  Updated
    src/awk/genenviron.awk for this.

  01 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix typeo in /etc/devfsd.conf, closing bug #11424, thanks to the
    sharp eye of Techie2000 <Linux@mochamail.com>.

    Rename /sbin/update-modules to /sbin/modules-update, closing
    bug #11445.

    Nano moved from /usr/bin/nano to /bin/nano.  Fix this in
    /etc/env.d/00basic, bug #10916.

  27 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:
