@@ -2,6 +2,10 @@
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  24 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:
+
+    Add a fix to /sbin/functions.sh for bug #12601.
+
   22 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:
 
     Add INFOPATH to /etc/env.d/00basic.
